script file to populate clickhouse

--- a/project/project2/Team_RRPB/.env.template
+++ b/project/project2/Team_RRPB/.env.template
@@ -2,4 +2,5 @@ MONGODB_URI=mongodb+srv://i40:dbms2@cluster0.lixbqmp.mongodb.net/
 MONGO_DB=Project2
 MONGO_RAW_COLL=raw_observations
 MONGO_ENR_COLL=enriched_observations
+CLICKHOUSE_URL=http://localhost:8123
 
