--- a/project/project2/Team_RRPB/package.json
+++ b/project/project2/Team_RRPB/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@clickhouse/client": "^1.14.0",
     "dotenv": "^17.2.3",
     "mongodb": "^7.0.0"
   }
